// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен нарисовать название автосервиса, если нет ссылки 1`] = `
<span
  className="VinReportHistoryRecord__value"
>
  Какой-то автосервис
</span>
`;

exports[`должен нарисовать ссылку на автосервис, если она есть 1`] = `
<span
  className="VinReportHistoryRecord__value"
>
  <Link
    target="_blank"
    url="https://auto.ru"
  >
    Какой-то автосервис
  </Link>
</span>
`;

exports[`если работ более 4х, должен их спрятать под раскрывашку 1`] = `
<Link
  onClick={[Function]}
>
  Ещё 
  2
</Link>
`;
